# mobiml

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  client.py  demo.ipynb  environment-flwr.yml  environment.yml  extract-vessel-data.py  mobiml-demo.ipynb  prepare-training-data.py  pyproject.toml  server.py  setup.cfg  setup.py  utils.py
.github/workflows/: tests.yaml
examples/: README.md  client.py  environment-flwr.yml  environment-viz.yml  mobiml-datasets.ipynb  mobiml-demo.ipynb  mobiml-fl-demo.ipynb  mobiml-geotracknet.ipynb  mobiml-nautilus.ipynb  mobiml-preprocessing.ipynb  mobiml-sampling.ipynb  mobiml-transforms.ipynb  porto_taxi_data.ipynb  server.py
examples/nautilus/: dataset.py  models.py  nautilus.ipynb  st_toolkit.py  train.py
examples/trajectory classifier/: extract-antenna-data.py  extract-vessel-data.py  prepare-training-data.py
examples/trajectory_classifier/: ais_loader.py  client.py  dvc.yml  extract-antenna-data.py  extract-vessel-data.py  ml_utils.py  params.yml  prepare-training-data.py  server.py  utils.py
mobiml/: utils.py
mobiml/datasets/: __init__.py  _dataset.py  ais_dataset.py  ais_mid_whitelist.csv  aisdk.py  brest_ais.py  copenhagen_cyclists.py  delhi_air_pollution.py  movebank_gulls.py  porto_taxis.py  utils.py
mobiml/loaders/: __init__.py  ais_loader.py  mover_splitter.py  temporal_splitter.py
mobiml/models/: __init__.py  ais_trajectory_classifier.py  bounds.py  distribution_utils.py  flags_config.py  geotracknet.py  runners.py  utils.py  vrf.py  vrf_dataset.py  vrnn.py
mobiml/preprocessing/: __init__.py  csv2pkl.py  mobile_client_extractor.py  stationary_client_extractor.py  traj_downsampler.py  traj_enricher.py  traj_filter.py  traj_splitter.py  traj_subsampler.py  utils.py
mobiml/samplers/: __init__.py  random_sampler.py  temporal_splitter.py
mobiml/tests/: test_ais_trip_extractor.py  test_aisdk.py  test_brest_ais.py  test_copenhagen_cyclists.py  test_dataset.py  test_dataset_sampler.py  test_delhi_air_pollution.py  test_delta_dataset_creator.py  test_mobile_client_extractor.py  test_movebank_gulls.py  test_mover_splitter.py  (+13 more)
movingml/: __init__.py  datasets.py  transformers.py  utils.py
tests/: __init__.py  test_dataset.py  test_delta_dataset_creator.py  test_movebank_gulls.py  test_temporal_splitter.py  test_traj_downsampler.py
(+65 files in other folders)
